crates/core/tests/snapshots/setting_merge_test__setting_merge__unnamed_enum__supports_standard.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    *self = next;
    Ok(())
}
